<resources>
    <string name="app_name">Quiz App with Firebase</string>

    //intro activity
    <string name="head"> Welcome TO Quiz Master</string>
    <string name="subhead">Isn’t life a collection of weird quizzes\n
        with no answers to half the questions </string>

    <string name="btnStart"> Get Started</string>

    //login activity
    <string name="login_now">Login Now</string>
    <string name="please_login">Please login to continue using app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account_signup">Dont have an account? Signup</string>
    <string name="conform_password">Confirm password</string>
    <string name="profile">Profile</string>
    <string name="follow_us">Follow Us</string>
    <string name="rate_us">Rate Us</string>


</resources>