<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signUpWave"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stay Connected"
            android:textColor="@color/primary_text"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Enter your email and password \n to get access your account"
            android:textColor="@color/primary_text"/>

        <EditText
            android:id="@+id/signupEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/edit_text_background"/>

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/signupConformPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@android:color/black"
            android:background="@drawable/edit_text_background"
            android:hint="@string/conform_password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>


        <Button
            android:id="@+id/btnSignup"
            android:background="@drawable/btn_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:padding="12dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/primary_text"
            android:text="Already have an account? Login"
            android:textAlignment="center"/>



    </LinearLayout>

    <ImageView
        android:id="@+id/signUpWave"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave"/>


</androidx.constraintlayout.widget.ConstraintLayout>